# davinci_wsn

./: .gitignore  README.md  davinci_notes  gazebo_notes  gazebo_notes_9_12  overview  stereo_calibration  toms_notes.txt
Davinci_vision/: calibration_notes
Davinci_vision/ballpicture/: Rfnc.m  ballimage_calibation  calib_fit.m  daVinci_endo_l.yaml  err_vec.m
Davinci_vision/images/: daVinci_endo_l.yaml  daVinci_endo_r.yaml
Davinci_vision/images3/: calibration.m  notes
Davinci_vision/images5/: cal_data.m  calib.data  calib.txt  calib_data  calibration5.m  notes
camera_calibration/: calibration_notes  left_camera.yaml  readme  right_camera.yaml  stereo_calibration
camera_calibration/calibrationdata/: ost.txt
camera_calibration/files/: Calibration steps  cameras_timesync.cpp  davinci_endo.launch  davinci_endo_view.launch
camera_syncer/: CMakeLists.txt  README.md  package.xml
camera_syncer/src/: cameras_timesync.cpp
cart_move_as/: CMakeLists.txt  README.md  package.xml
cart_move_as/src/: cart_move_as.cpp  cart_move_client_example.cpp  cart_move_client_svc.cpp
cwru_davinci_msgs/cwru_davinci_srv/: CMakeLists.txt  package.xml
davinci_gazebo/: CMakeLists.txt  README.md  davinci.world  package.xml
davinci_gazebo/launch/: sticky_davinci_gazebo.launch
davinci_gazebo/model/: both_psms_sticky.urdf.xacro  gazebo_psm_sticky.tool.sca.urdf.xacro  psm_sticky.urdf.xacro
davinci_gazebo/world/: sticky_davinci.world
davinci_kinematics/: CMakeLists.txt  README.md  debug_notes  joint_limit_notes  joint_limits  more_kinematics_notes  package.xml
davinci_kinematics/include/davinci_kinematics/: davinci_joint_publisher.h  davinci_kinematics.h
davinci_kinematics/src/: daviinci_playfile.cpp  davinci_cart_traj_pub.cpp  davinci_joint_publisher.cpp  davinci_joint_publisher_test_main.cpp  davinci_kinematics.cpp  davinci_kinematics_test_main.cpp  davinci_kinematics_test_main2.cpp  davinci_kinematics_test_main3.cpp  davinci_kinematics_test_main4.cpp  davinci_playfile_jointspace.cpp  test_pointer.cpp
davinci_opencv/: CMakeLists.txt  README.md  package.xml
davinci_opencv/src/: color_interp_v2.cpp  color_interp_v3.cpp  color_interp_v4._bkupcpp  color_interp_v4.cpp  color_interpretation.cpp  color_interpretation_old.cpp  davinci_find_blue_pixels_centroid.cpp  davinci_find_red_pixels_centroid.cpp
davinci_playfiles/: CMakeLists.txt  README  README.md  camera_circular_arc.csp  cameraspace_home.csp  cameraspace_peg_handoff.csp  cameraspace_peg_handoff_prepose.csp  cameraspace_peg_handoff_prepose_grab.csp  close_gripper_retracted.csp  grasp_peg.csp  gripper_origin_plot.m  hand_off_peg.csp  hand_off_peg_partial.csp  home.jsp  package.xml  pick_needle.csp  retract.csp  retract_derlin.csp  retract_needle.csp  retracted_close_grippers.csp  test_cameraspace.csp  test_cameraspace3.csp  test_cameraspace4.csp  test_cameraspace5.csp  test_cameraspace6.csp  test_cameraspace_peg_handoff.csp  test_jnt_lims.jsp  testfile.csp  testfile.jsp  testfile2.csp  testfile2.jsp  testfile3.csp  testfile5.csp
davinci_traj_streamer/: CMakeLists.txt  README.md  package.xml
davinci_traj_streamer/action/: traj.action
davinci_traj_streamer/src/: traj_action_client_pre_pose.cpp  traj_interpolator_as.cpp  traj_interpolator_as_rviz_only.cpp  traj_interpolator_both_as.cpp
dv_models/: CMakeLists.txt  package.xml  replaces
dv_string_puller/: CMakeLists.txt  package.xml
dv_string_puller/launch/: start_sim.launch
dv_string_puller/play/jsp/: all_zero.jsp  bothhands_grasp.jsp  bothhands_grasp_finish.jsp  pull_rh_prep.jsp  righthand_baton.jsp  righthand_grabbing.jsp  sp_pre_grasp.jsp  tolerance_1.jsp  tolerance_2.jsp  tolerance_3.jsp  tolerance_4.jsp  tolerance_5.jsp  tolerance_6.jsp  tolerance_7.jsp  wiggle_every_joint.jsp
dv_string_puller/scripts/: run_handoff_script.sh  run_prep_script.sh  run_sim_script.sh
dv_string_puller/src/: pull_string_hardcoded.cpp
dvrk_model/: launch_notes
dvrk_model/config/: davinci_control.yaml  davinci_control_both.yaml  davinci_disparity.yaml
dvrk_model/launch/: davinci.rviz  davinci.world  davinci_control.launch  davinci_control_both.launch  davinci_control_debug.launch  davinci_endo_sim.launch  davinci_tissue.world  davinci_w_needles_gazebo.launch  derlin_davinci_gazebo.launch  wsn_davinci_gazebo.launch  wsn_davinci_rotated_gazebo.launch  wsn_gazebo_dvrk.launch  wsn_gazebo_dvrk.launch~  wsn_psm_both_rviz.launch  wsn_psm_both_rviz.launch~  wsn_psm_one_rviz.launch  wsn_rosparam_gazebo_load.launch  wsn_rosparam_load.launch  wsn_rosparam_load.launch~
dvrk_model/model/: both_psms.urdf  both_psms.urdf.xacro  davinci_w_needles.urdf.xacro  gazebo_psm.base.urdf.xacro  gazebo_psm.tool.sca.urdf.xacro  gazebo_psm.tool.sca.urdf.xacro_backup  gazebo_psm.tool_w_needle.sca.urdf.xacro  old_gazebo_psm.tool.sca.urdf.xacro  wsn_both_psms.urdf.xacro  (+5 more)
models/: outdated
needle_planner/: CMakeLists.txt  README.md  davinci_needle_path_notes.txt  how_to_run_tests  package.xml
needle_planner/include/needle_planner/: needle_planner.h  needle_planner_v2.h
needle_planner/src/: needle_plan_horiz_kvec.cpp  needle_planner.cpp  needle_planner_kvec_horiz_psm2.cpp  needle_planner_kvec_horiz_test_main.cpp  needle_planner_kvec_horiz_test_main_v2.cpp  needle_planner_kvec_horiz_test_main_v3.cpp  needle_planner_test_main.cpp  needle_planner_test_main_v2.cpp  needle_planner_test_simple_path.cpp  needle_planner_v2.cpp  simple_needle_planner_test_main.cpp  test_needle_plan_horiz_kvec.cpp
other_utilities/: CMakeLists.txt  package.xml
other_utilities/include/other_utilities/: math_utility.h
other_utilities/src/: math_utility.cpp
playfile_reader/: CMakeLists.txt  README.md  package.xml
playfile_reader/include/playfile_reader/: playfile_record.h
playfile_reader/src/: davinci_playfile_cameraspace.cpp  davinci_playfile_cartspace.cpp  davinci_playfile_jointspace.cpp  playfile_record.cpp
wsn_move_davinci_rviz/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
wsn_move_davinci_rviz/src/: davinci_ik.cpp  davinci_ik.cpp~  davinci_joint_state_publisher.cpp  jnt1_sinusoid.cpp
(+19 files in other folders)
